--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,19 @@ body {
     background-color: #007892;
   }
 }
+
+@media (max-width: 767px) {
+  .error-page {
+    width: 100%;
+  }
+  .error-page > .headline {
+    float: none;
+    text-align: center;
+  }
+  .error-page > .error-content {
+    margin-left: 0;
+  }
+  .error-page > .error-content > h3 {
+    text-align: center;
+  }
+}
